vlib/v/checker/tests/array_init_ptr_non_ptr_elem_err.vv
struct World {
	chunks []&Chunk
}

struct Chunk {
	id int
	// Big data here
}

fn main() {
	chunk1 := Chunk{1}
	w := World{
		chunks: [&Chunk{0}, chunk1]
	}

	println(w)
}
